[package]
name = "url_shortener_lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "0.55.1"
aws-sdk-dynamodb = "0.26.0"
axum = "0.6.16"
axum-macros = "0.3.7"
chrono = { version = "0.4.24", features = ["serde"] }
lambda_http = { version = "0.8.0" }
lambda_runtime = "0.8.0"
nanoid = "0.4.0"
once_cell = "1.17.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_dynamo = { version = "4.2.1", features = ["aws-sdk-dynamodb+0_26"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["macros", "parking_lot"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "json",
] }
validator = { version = "0.16.0", features = ["derive"] }
